resources/bad-developer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bad-developer
    app.kubernetes.io/component: bad-developer
    app.kubernetes.io/instance: bad-developer
    app.kubernetes.io/part-of: bad-developer
  name: bad-developer
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bad-developer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bad-developer
        deploymentconfig: bad-developer
    spec:
      containers:
      - image: quay.io/wdovey/bad-developer:latest
        imagePullPolicy: Always
        name: bad-developer
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
