resources/bad-developer/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: bad-developer
    app.kubernetes.io/instance: bad-developer
  name: bad-developer
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bad-developer
    deploymentconfig: bad-developer
  sessionAffinity: None
  type: ClusterIP
